--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-aux": "^1.1.0",
